--- a/.env
+++ b/.env
@@ -1,18 +1,20 @@
-VITE_API_URL=https://turned-proxy-arrivals-job.trycloudflare.com
-VITE_URL_PRODUCTO=https://turned-proxy-arrivals-job.trycloudflare.com/productos
-VITE_URL_CATEGORIA=https://turned-proxy-arrivals-job.trycloudflare.com/categorias
-VITE_URL_USUARIO=https://turned-proxy-arrivals-job.trycloudflare.com/usuarios
-VITE_URL_USUARIO_DIRECCION=https://turned-proxy-arrivals-job.trycloudflare.com/usuarios-direccion
-VITE_URL_TALLE=https://turned-proxy-arrivals-job.trycloudflare.com/talles
-VITE_URL_PRECIO=https://turned-proxy-arrivals-job.trycloudflare.com/precios
-VITE_URL_ORDEN=https://turned-proxy-arrivals-job.trycloudflare.com/ordenes-compra
-VITE_URL_ITEM_ORDEN=https://turned-proxy-arrivals-job.trycloudflare.com/items-orden
-VITE_URL_IMG=https://turned-proxy-arrivals-job.trycloudflare.com/imgs
-VITE_URL_DIRECCION=https://turned-proxy-arrivals-job.trycloudflare.com/direcciones
-VITE_URL_DETALLE=https://turned-proxy-arrivals-job.trycloudflare.com/detalles
-VITE_URL_DESCUENTO=https://turned-proxy-arrivals-job.trycloudflare.com/descuentos
-VITE_URL_LOGIN=https://turned-proxy-arrivals-job.trycloudflare.com/usuarios/login
-VITE_URL_REGISTRO=https://turned-proxy-arrivals-job.trycloudflare.com/usuarios/register   
-VITE_URL_PRODUCTOS=https://turned-proxy-arrivals-job.trycloudflare.com/productos
+VITE_API_URL=http://localhost:3000
+VITE_URL_PRODUCTO=http://localhost:3000/productos
+VITE_URL_CATEGORIA=http://localhost:3000/categorias
+VITE_URL_USUARIO=http://localhost:3000/usuarios
+VITE_URL_USUARIO_DIRECCION=http://localhost:3000/usuarios-direccion
+VITE_URL_TALLE=http://localhost:3000/talles
+VITE_URL_PRECIO=http://localhost:3000/precios
+VITE_URL_ORDEN=http://localhost:3000/ordenes-compra
+VITE_URL_ITEM_ORDEN=http://localhost:3000/items-orden
+VITE_URL_IMG=http://localhost:3000/imgs
+VITE_URL_DIRECCION=http://localhost:3000/direcciones
+VITE_URL_DETALLE=http://localhost:3000/detalles
+VITE_URL_DESCUENTO=http://localhost:3000/descuentos
+VITE_URL_LOGIN=http://localhost:3000/usuarios/login
+VITE_URL_REGISTRO=http://localhost:3000/usuarios/register   
+VITE_URL_PRODUCTOS=http://localhost:3000/productos
 
-VITE_URL_MERCADOPAGO=https://turned-proxy-arrivals-job.trycloudflare.com/mercadopago
+VITE_URL_MERCADOPAGO=http://localhost:3000/mercadopago
+VITE_CLOUDINARY_CLOUD_NAME=dvuwddwop
+VITE_CLOUDINARY_UPLOAD_PRESET=ecommerce
