--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.14.3",
+    "@cloudinary/url-gen": "^1.21.0",
     "@mercadopago/sdk-react": "^1.0.3",
     "axios": "^1.9.0",
     "lucide-react": "^0.503.0",
